<resources>
    <string name="app_name">Dyktafon</string>
    <string name="start_recording">Rozpocznij nagrywanie</string>
    <string name="stop_recording">Zatrzymaj nagrywanie</string>
    <string name="no_recordings">Brak nagrań</string>
    <string name="settings">Ustawienia</string>
    <string name="delete">Usuń</string>
    <string name="play">Odtwórz</string>
    <string name="pause">Pauza</string>
    <string name="recording_saved">Nagranie zapisane</string>
    <string name="permission_required">Wymagane uprawnienie do mikrofonu</string>
    <string name="quality_settings">Jakość nagrania</string>
    <string name="low_quality">Niska (64 kbps)</string>
    <string name="medium_quality">Średnia (128 kbps)</string>
    <string name="high_quality">Wysoka (256 kbps)</string>
</resources>